--- a/MyShop/Views/Shared/_Layout.cshtml
+++ b/MyShop/Views/Shared/_Layout.cshtml
@@ -4,10 +4,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - MyShop</title>
-	<link rel="stylesheet" href="~/assets/css/style.css" asp-append-version="true" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="~/assets/css/style.css" />
 
 	@RenderSection("head", required: false)
 </head>
@@ -29,8 +29,14 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__wrapper">
-				<a href="/" class="header__logo">MyShop💻</a>
+				<a href="/" class="header__logo"><b>My</b>mobile</a>
 				<div class="header__right">
+					<i class="search-icon-mobile">
+							<svg xmlns="http://www.w3.org/2000/svg" fill="transparent" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" class="size-1">
+								<path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+							</svg>
+
+						</i>
 					<form class="header__search" asp-area="" asp-controller="Home" asp-action="Search" method="post">
 						<input type="text" name="keyword" id="search" placeholder="Օր. Iphone 15 Pro" />
 						<div id="result" class="tag-results hidden"></div>
@@ -42,10 +48,15 @@
 
 						</i>
 					</form>
-					<a asp-area="" asp-controller="Info" asp-action="AboutUs" class="header__link">Մեր մասին</a>
-					<a asp-area="" asp-controller="Info" asp-action="Contact" class="header__link">Կապ մեզ հետ</a>
+					<div class="header__pages">
+						<a asp-area="" asp-controller="Info" asp-action="AboutUs" class="header__link">Մեր մասին</a>
+						<a asp-area="" asp-controller="Info" asp-action="Contact" class="header__link">Կապ մեզ հետ</a>
+					</div>
 					<div class="header__phone">
-						<a href="tel:+37499887766">+374 99 88 77 66</a>
+						<a href="tel:+37499887766">
+							<span>+374 99 88 77 66</span>
+						<?xml version="1.0" encoding="utf-8"?><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 122.88" style="enable-background:new 0 0 122.88 122.88" xml:space="preserve"><g><path d="M61.44,0c16.97,0,32.33,6.88,43.44,18c11.12,11.12,18,26.48,18,43.44c0,16.96-6.88,32.33-18,43.44 c-11.12,11.12-26.48,18-43.44,18c-16.97,0-32.33-6.88-43.44-18C6.88,93.77,0,78.41,0,61.44C0,44.47,6.88,29.11,18,18 C29.11,6.88,44.47,0,61.44,0L61.44,0z M48.1,56.19c2,3.6,4.3,7.06,7.29,10.21c2.99,3.17,6.72,6.06,11.55,8.52 c0.35,0.18,0.7,0.18,1,0.05c0.46-0.18,0.92-0.55,1.39-1.01c0.35-0.35,0.8-0.93,1.27-1.55c1.85-2.44,4.15-5.47,7.39-3.96 c0.07,0.03,0.13,0.07,0.2,0.11l10.81,6.22c0.03,0.02,0.07,0.05,0.11,0.07c1.43,0.98,2.02,2.49,2.03,4.2c0,1.75-0.64,3.71-1.58,5.36 c-1.25,2.19-3.08,3.63-5.2,4.6c-2.01,0.92-4.26,1.42-6.41,1.74c-3.38,0.5-6.55,0.18-9.8-0.82c-3.17-0.98-6.37-2.61-9.85-4.76 l-0.25-0.16c-1.6-1-3.33-2.07-5.03-3.33c-6.21-4.68-12.54-11.45-16.65-18.9c-3.46-6.26-5.34-13.01-4.32-19.44 c0.57-3.53,2.09-6.74,4.72-8.85c2.3-1.85,5.4-2.87,9.41-2.51c0.46,0.03,0.87,0.3,1.09,0.7l6.94,11.72 c1.01,1.32,1.14,2.62,0.59,3.92c-0.46,1.07-1.39,2.05-2.66,2.98c-0.37,0.32-0.82,0.64-1.29,0.98c-1.55,1.12-3.32,2.42-2.71,3.96 L48.1,56.19L48.1,56.19L48.1,56.19L48.1,56.19z M98.3,24.58C88.87,15.15,75.83,9.31,61.44,9.31c-14.39,0-27.43,5.83-36.86,15.27 C15.15,34.01,9.31,47.05,9.31,61.44c0,14.39,5.83,27.43,15.27,36.86s22.46,15.27,36.86,15.27c14.39,0,27.43-5.83,36.86-15.27 c9.43-9.43,15.27-22.46,15.27-36.86C113.57,47.05,107.73,34.01,98.3,24.58L98.3,24.58z"/></g></svg>
+						</a>
 					</div>
 					<a class="header__basket" asp-area="" asp-controller="Order" asp-action="Create">
 						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" class="size-6">
@@ -53,6 +64,8 @@
 						</svg>
 						@await Component.InvokeAsync("BasketCountViewComponent")</span>
 					</a>
+				</div>
+				<div class="header__burger">
 				</div>
 			</div>
 		</div>
