product add images list

--- a/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -31,8 +31,12 @@
     <label>Скидка : <input type="number" asp-for="Discount" /></label>
     </div><br>
     <div>
-        Картина :
-        <input type="file" name="formfile" />
+        Main Image :
+        <input type="file" name="mainImage" />
+    </div><br>
+    <div>
+       Images :
+        <input type="file" name="Images"  multiple/>
     </div><br>
    <div>
     <label>Топовый : <input type="checkbox" asp-for="IsHot" /></label>
