--- a/MyShop/Views/Shared/_Layout.cshtml
+++ b/MyShop/Views/Shared/_Layout.cshtml
@@ -13,17 +13,8 @@
 </head>
 <body>
 
-	<div id="loader" style="display: none;">
-		<div class="lds-roller">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
+	<div class="loader__wrapper" style="display:none;" id="loader">
+		<div class="loader"></div>
 	</div>
 
 	<header class="header">
