--- a/MyShop/wwwroot/assets/css/product.css
+++ b/MyShop/wwwroot/assets/css/product.css
@@ -1,29 +1,51 @@
 ﻿.product {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
-.product .container {
-    max-width: 1200px;
-}
+
+    .product .container {
+        max-width: 1200px;
+    }
+
 .product__wrapper {
-    display:flex;
+    display: flex;
     gap: 50px;
-    background:#fff;
     padding: 50px;
 }
+
 .product__title {
     font-size: 24px;
     font-weight: 500;
-    margin-bottom:20px;
-    color:#333333;
+    margin-bottom: 20px;
+    color: #333333;
 }
+
+.product__title.mobile {
+    display: none;
+}
+
 .product__description {
     max-width: 500px;
 }
+
 .product__price {
     margin: 20px 0;
     font-size: 36px;
     color: #333333;
+    position: relative;
 }
+
+    .product__price.disc {
+        margin-top: 40px;
+    }
+
+    .product__price .del {
+        color: red;
+        font-size: 24px;
+        position: absolute;
+        top: -30px;
+        left: -20px;
+    }
+
 .swiper {
     max-width: 450px;
     margin: 0 !important;
@@ -38,8 +60,9 @@
     justify-content: center;
     align-items: center;
     height: 400px !important;
-    cursor:pointer;
+    cursor: pointer;
 }
+
 .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
     bottom: 2px !important;
 }
@@ -63,8 +86,107 @@
     transition: all 0.3s ease;
     border: 1px solid var(--green)
 }
+
     .addToCart:hover {
         background: var(--green);
         color: var(--white);
         border-color: transparent;
     }
+
+.product-characteristics .title {
+    text-align: center;
+}
+
+.product-characteristics__items {
+    max-width: 500px;
+    margin: 50px auto 0 auto;
+}
+
+.product-characteristics__item {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #777;
+    padding: 10px;
+    margin-bottom: 2px;
+}
+
+@media (max-width: 992px) {
+    .product__wrapper {
+        padding: 25px;
+        gap: 20px;
+    }
+
+    .swiper {
+        max-width: 300px;
+    }
+
+    .swiper-slide {
+        height: 300px !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .product{ 
+        margin-bottom: 30px;
+    }
+    .product__wrapper {
+        flex-direction: column;
+        padding: 0px;
+    }
+
+    .product__title {
+        display: none;
+    }
+
+    .product__title.mobile {
+        display: block;
+        padding-top: 20px;
+        font-size: 18px;
+    }
+
+    .product__price .del {
+        font-size: 16px;
+        top: -25px;
+    }
+
+    .product__price.disc {
+        font-size: 20px;
+    }
+
+    .swiper {
+        max-width: 100%;
+    }
+
+    .swiper-slide {
+        height: 200px !important;
+    }
+    .addToCartForm {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+   
+    .product__description {
+        max-width: 100%;
+    }
+    .count-range {
+        max-width: 150px;
+    }
+    .count-range button {
+        width: 40px;
+        height: 40px;
+    }
+    .product-characteristics__items {
+        margin: 20px auto 0 auto;
+    }
+}
+
+
+@media (max-width: 479px) {
+    .addToCart {
+        width: 100%;
+    }
+}
